tdf#159168: consider dflt char format 'applied', even if it apparently is not

Change-Id: Id525b934a0e329e5c630f81e2e959f29b5dffc0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171096
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>